2019-1/231/users/4225/executions/1769_1583.log
== SUBMITION (2019-05-30 16:21:43) 
-- CODE:
http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1769&turma=231#tab-1583s = input("string multiplo de 3: ")

i = 0
ss = ""
j = 2
k = 0
tamanho = len(s)/3
while(i<tamanho):
	ss = ss + s[k:j+1] + '.'
	j = j + 3
	k = k + 3
	i = i + 1

print(ss[:-1])
-- EXECUTION TIME:
0.176722
-- ERROR:
  File "/home/codebench/codes/1769/1583/main.py", line 1
    http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1769&turma=231#tab-1583s = input()
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:04) 
-- CODE:
s = input("string multiplo de 3: ")

i = 0
ss = ""
j = 2
k = 0
tamanho = len(s)/3
while(i<tamanho):
	ss = ss + s[k:j+1] + '.'
	j = j + 3
	k = k + 3
	i = i + 1

print(ss[:-1])
-- EXECUTION TIME:
0.119952
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
